Update branding and database schema for donations

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asociación de Donaciones - Inicio de Sesión</title>
+    <title>Crumbs - Inicio de Sesión</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container">
         <div class="auth-card">
             <div class="logo">
-                <h1>🤝 Asociación Solidaria</h1>
+                <h1>CRUMBS</h1>
                 <p>Juntos ayudamos a quien más lo necesita</p>
             </div>
 
@@ -35,11 +35,6 @@
                 <p class="auth-switch">
                     ¿No tienes cuenta? <a href="register.html">Regístrate aquí</a>
                 </p>
-
-                <div class="demo-info">
-                    <p><strong>Demo:</strong></p>
-                    <p>Usuario: <code>admin</code> | Contraseña: <code>admin123</code></p>
-                </div>
             </form>
         </div>
     </div>
