--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asociación de Donaciones - Registro</title>
+    <title>Crumbs - Registro</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container">
         <div class="auth-card">
             <div class="logo">
-                <h1>🤝 Asociación Solidaria</h1>
+                <h1>Crumbs</h1>
                 <p>Únete a nuestra comunidad</p>
             </div>
 
