Remove emojis from admin panel titles and update primary, danger, success color variables in CSS

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-brand">
-            <h2>🤝 Panel de Administración</h2>
+            <h2>Panel de Administración</h2>
         </div>
         <div class="nav-user">
             <span>Admin: <strong id="userName"></strong></span>
@@ -20,10 +20,10 @@
     <div class="dashboard-container">
         <aside class="sidebar">
             <ul class="menu">
-                <li><a href="#" onclick="showSection('users')" class="active">👥 Administrar Usuarios</a></li>
-                <li><a href="#" onclick="showSection('donations')">💰 Administrar Donaciones</a></li>
-                <li><a href="#" onclick="showSection('inventory')">📦 Administrar Inventario</a></li>
-                <li><a href="#" onclick="showSection('reports')">📊 Reportes</a></li>
+                <li><a href="#" onclick="showSection('users')" class="active">Administrar Usuarios</a></li>
+                <li><a href="#" onclick="showSection('donations')">Administrar Donaciones</a></li>
+                <li><a href="#" onclick="showSection('inventory')">Administrar Inventario</a></li>
+                <li><a href="#" onclick="showSection('reports')">Reportes</a></li>
             </ul>
         </aside>
 
